# engine

./: .gitignore  CMakeLists.txt  main.c  todo.txt
assets/maps/: map1.map  map2.map
build2/: cmake_install.cmake  game
ecs/: component.c  component.h  entity.c  entity.h
engine/: engine.c  engine.h  input.c  input.h  my_math.c  renderer.c
engine/ecs/: component_sprite.h  component_transform.c  component_transform.h  ecs_init.c  ecs_init.h  entity.c  system_movement.c  system_movement.h  system_render.c  system_render.h
engine/ecs/components/: component_collider.c  component_collider.h  component_input.c  component_sprite.c  component_tag.c  component_tag.h  component_transform.c  component_transform.h
engine/ecs/systems/: system_collision.c  system_input.c  system_movement.c  system_movement.h  system_render.c
game/: game.c  player.c  player.h
include/: camera.h  engine.h  input.h  key_binding.h  my_math.h  renderer.h
include/ecs/: entity.h
include/ecs/components/: component.h  component_collider.h  component_input.h  component_script.h  component_sprite.h  component_tag.h  component_transform.h
include/ecs/systems/: system_collision.h  system_input.h  system_movement.h  system_render.h
include/map/: map.h  map_loader.h  map_parser.h
src/: asset_loader.c  camera.c  engine.c  key_binding.c
src/ecs/: ecs_init.c  entity.c
src/ecs/components/: component_script.c  component_sprite.c  component_tag.c
src/ecs/systems/: system_collision.c  system_input.c  system_movement.c  system_render.c
src/map/: map.c  map_loader.c  map_parser.c
